<resources>
    <string name="app_name" translatable="false">Card Tracker</string>
    <string name="welcome">Welcome</string>
    <string name="id_ntracker">Id\nTracker</string>
    <string name="user_id">User-ID</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="mapbox_access_token">7e76440293964e5593287125e18625a3</string>
    />
    <string name="title_activity_history">History</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="open" />
    <string name="close" />
    <string name="user_name">User-Name</string>
    <string name="email_address">Email Address</string>
    <string name="mobile">Mobile</string>
    <string name="address">Address</string>
    <string name="date_of_purchase">Date of purchase</string>
    <string name="invoice_no">Invoice no</string>
    <string name="phone_number">Phone Number</string>
    <string name="show_device">Show Device</string>
    <string name="update">Update</string>
    <string name="submit">Submit</string>
    <string name="user_id_show">User ID</string>
    <string name="user_name_show">User Name</string>
    <string name="tenant_id_SHOW">Tenant ID</string>
    <string name="password_show">Password</string>
    <string name="role_show">Role</string>
    <string name="device_id">Device ID</string>
</resources>