<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.iotaii.card_tracker.admin">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">

    <Button
        android:id="@+id/addnew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="200dp"
        android:backgroundTint="#090909"
        android:text="Add New"
        android:textColorLink="#0D0C0C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.861" />

    <Button
        android:id="@+id/update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:backgroundTint="#141313"
        android:text="Update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.861" />

    <Button
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:backgroundTint="#1F1E1E"
        android:text="Delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.918"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.861" />

    <TextView
        android:id="@+id/user_id_show"
        android:layout_width="132dp"
        android:layout_height="39dp"
        android:layout_marginStart="24dp"

        android:layout_marginTop="70dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:paddingStart="16dp"
        android:text="@string/user_id_show"
        android:textSize="25sp"
        android:typeface="sans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/user_name_show"
        android:layout_width="153dp"
        android:layout_height="47dp"

        android:layout_marginStart="24dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:paddingStart="16dp"
        android:text="@string/user_name_show"

        android:textSize="25sp"
        android:typeface="sans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_id_show" />

    <TextView
        android:id="@+id/tenant_id_show"
        android:layout_width="167dp"
        android:layout_height="53dp"

        android:layout_marginStart="24dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:paddingStart="16dp"
        android:text="@string/tenant_id_SHOW"
        android:textSize="25sp"
        android:typeface="sans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name_show" />

    <TextView
        android:id="@+id/password_show"
        android:layout_width="172dp"
        android:layout_height="51dp"

        android:layout_marginStart="24dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:paddingStart="16dp"
        android:text="@string/password_show"
        android:textSize="25sp"
        android:typeface="sans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tenant_id_show" />

    <TextView
        android:id="@+id/role_show"
        android:layout_width="89dp"
        android:layout_height="51dp"

        android:layout_marginStart="24dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:paddingStart="16dp"
        android:text="@string/role_show"
        android:textSize="25sp"
        android:typeface="sans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_show" />

    <TextView
        android:id="@+id/user_id_display"
        android:layout_width="134dp"
        android:layout_height="39dp"
        android:layout_marginStart="80dp"

        android:layout_marginTop="71dp"
        android:layout_marginEnd="41dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/user_id_show"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/user_name_display"
        android:layout_width="195dp"
        android:layout_height="60dp"

        android:layout_marginStart="30dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="9dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/user_name_show"
        app:layout_constraintTop_toBottomOf="@+id/user_id_display" />

    <TextView
        android:id="@+id/tenant_id_display"
        android:layout_width="133dp"
        android:layout_height="42dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="30dp"

        android:layout_marginEnd="29dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tenant_id_show"
        app:layout_constraintTop_toBottomOf="@+id/user_name_display" />

    <TextView
        android:id="@+id/password_display"
        android:layout_width="183dp"
        android:layout_height="50dp"

        android:layout_marginStart="21dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="11dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/password_show"
        app:layout_constraintTop_toBottomOf="@+id/tenant_id_display" />

    <TextView
        android:id="@+id/role_display"
        android:layout_width="134dp"
        android:layout_height="40dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="49dp"

        android:layout_marginEnd="64dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/role_show"
        app:layout_constraintTop_toBottomOf="@+id/password_display" />


  </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>
